swaggo doesn't let me put the exact format of the error response into the swagger docs, this will have to do.
